--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
@@ -504,6 +504,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name="一个他妈的测试页面" class="md-header-anchor"></a><span>一个他妈的测试页面，</span></h1><blockquote><p><span>临时操作：密码是1256，aes，正常文本使用base64</span></p><p><span>——by：lzy</span></p></blockquote><p><em><span>关于乱码问题，已经解决（可能吧）</span></em></p><p><strong><span>基操勿6</span></strong></p><p>&nbsp;</p><p>&nbsp;</p><p><span>a fuck test page</span></p><p><span>pw:1256 (aes)</span></p><p><strong><span>gay fuck donot 6</span></strong></p></div>
+<div  id='write'  class = 'is-node'><h1><a name="一个他妈的测试页面" class="md-header-anchor"></a><span>一个他妈的测试页面，</span></h1><blockquote><p><span>临时操作：密码是1256，aes，正常文本使用base64</span></p><p><span>——by：lzy</span></p></blockquote><p><em><span>关于乱码问题，已经解决（可能吧）李锦尧就是一sb，这句话用来测试</span></em></p><p><strong><span>基操勿6</span></strong></p><p>&nbsp;</p><p>&nbsp;</p><p><span>a fuck test page</span></p><p><span>pw:1256 (aes)</span></p><p><strong><span>gay fuck donot 6</span></strong></p></div>
 </body>
 </html>
