--- a/docxs/index.html
+++ b/docxs/index.html
@@ -504,6 +504,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name="目录" class="md-header-anchor"></a><span>目录：</span></h1><h3><a name="维基" class="md-header-anchor"></a><span>维基：</span></h3><a href="https://baike.baidu.com/item/GalGame/423361?fr=aladdin">galgame是什么，不要小看galgame啊！</a></div>
+<div  id='write'  class = 'is-node'><h1><a name="文档目录" class="md-header-anchor"></a><span>文档目录</span></h1><h2><a name="学习资料" class="md-header-anchor"></a><span>学习资料</span></h2><p>&nbsp;</p><a href="https://lzy-best.github.io/docxs/rbt/robot.htm">计算机基础-网络与机器人.doc</a></div>
 </body>
 </html>
