--- a/text/index.html
+++ b/text/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
@@ -1755,6 +1755,6 @@ footer.ty-footer {
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name="加密聊天发布页" class="md-header-anchor"></a><span>加密聊天发布页</span></h1><p><span>目前使用qtox聊天，但因其无服务器，以后要改，改的时候会在这里通知大家</span></p><p><span>不出意外的话正常语句用base64，aes加密的话就密码1256</span></p><p><span>2020-6-30 08:51:24更新</span></p><p>&nbsp;</p></div>
+<div  id='write'  class = 'is-node'><h1><a name="加密聊天发布页" class="md-header-anchor"></a><span>加密聊天发布页</span></h1><p><span>目前使用qtox聊天，但因其无服务器，以后要改，改的时候会在这里通知大家</span></p><p><span>不出意外的话正常语句用base64，aes加密的话就密码1256</span></p><p><span>2020-6-30 08:51:24更新</span></p><p>&nbsp;</p><a href="http://file.download.akeychat.cn/2.4.90.2/AKeyChatSetup.v2.4.90.2.exe">用这个聊天吧</a></div>
 </body>
 </html>
